--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
         "cheerio": "^1.0.0-rc.12",
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "fake-useragent": "^1.0.1",
         "puppeteer": "^17.1.3",
         "python-shell": "^3.0.1"
     }
