--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "yarn install && react-scripts build",
+    "build": "yarn install && CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
