--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
         "axios": "^0.27.2",
         "cheerio": "^1.0.0-rc.12",
         "cors": "^2.8.5",
+        "dotenv-defaults": "^5.0.2",
         "express": "^4.18.1",
         "fake-useragent": "^1.0.1",
+        "mongoose": "^6.6.3",
         "puppeteer": "^17.1.3",
         "python-shell": "^3.0.1"
     }
