--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "scripts": {
-      "frontend": "cd frontend && yarn start",
-      "start": "node app.js",
-      "build": "yarn install && cd backend && yarn install && cd .. && cd frontend && yarn build"
-  },
-  "type": "module",
-  "dependencies": {
-      "axios": "^0.27.2",
-      "cheerio": "^1.0.0-rc.12",
-      "cors": "^2.8.5",
-      "express": "^4.18.1"
-  }
+    "scripts": {
+        "frontend": "cd frontend && yarn start",
+        "start": "node app.js",
+        "build": "yarn install && cd backend && yarn install && cd .. && cd frontend && yarn build"
+    },
+    "type": "module",
+    "dependencies": {
+        "axios": "^0.27.2",
+        "cheerio": "^1.0.0-rc.12",
+        "cors": "^2.8.5",
+        "dotenv-defaults": "^5.0.2",
+        "express": "^4.18.1",
+        "mongoose": "^6.6.3"
+    }
 }
