--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
         "dotenv-defaults": "^5.0.2",
         "express": "^4.18.1",
         "fake-useragent": "^1.0.1",
+        "jieba-zh-tw": "^1.0.12",
+        "js-jieba": "^1.0.12",
         "mongoose": "^6.6.3",
         "puppeteer": "^17.1.3",
         "python-shell": "^3.0.1"
